Fix Alignment. Remove Discussions

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -228,6 +228,7 @@ body {
 }
 
 #p-namespaces {
+    display: none;
     float: left;
 
     li {
@@ -442,7 +443,7 @@ pre,
     }
 
     .firstHeading {
-        text-align: center;
+        text-align: left;
     }
 
     h1.firstHeading {
